# low_latency_voice

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  REQUIREMENTS.md
apps/benchmark_cli/: main.cpp
apps/realtime_app/: Main.cpp
benchmarks/: bench_audio_pipeline.cpp
docs/: architecture.md  audio_callback_flow.md  benchmark_protocol.md  f0_estimation.md  inference_backend.md  latency_budget.md  model_notes.md  project_plan.md  worker_pipeline.md
models/: README.md
src/audio/: AudioBlock.h  AudioEngine.cpp  AudioEngine.h  AudioSettings.h  AudioWorkerPipeline.cpp  AudioWorkerPipeline.h  SpscRingBuffer.h
src/common/: AudioChunk.h  Logger.h  Result.h  Threading.h
src/dsp/: PitchYIN.cpp  PitchYIN.h
src/inference/: AudioTensorAdapter.cpp  AudioTensorAdapter.h  DummyVoiceConversionBackend.cpp  DummyVoiceConversionBackend.h  IVoiceConversionBackend.cpp  IVoiceConversionBackend.h  OnnxBackend.cpp  OnnxBackend.h
src/profiler/: LatencyProfiler.cpp  LatencyProfiler.h
tests/: test_audio_engine.cpp  test_audio_tensor_adapter.cpp  test_audio_worker_pipeline.cpp  test_inference_backends.cpp  test_latency_profiler.cpp  test_main.cpp  test_pitch_yin.cpp  test_spsc_ring_buffer.cpp
tools/: create_identity_onnx.py  install_onnxruntime_windows.ps1  requirements-model.txt
